--- a/7/index.html
+++ b/7/index.html
@@ -93,6 +93,6 @@
         </div>
     </div>
 </div>
-    <script src="6/6script.js"></script>
+    <script src="7script.js"></script>
 </body>
 </html>
