--- a/5/index.html
+++ b/5/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-	<script src="5\к заданию 5\script.js"></script>
+	<script src="5script.js"></script>
 
   </body>
 </html>
