--- a/9/index.html
+++ b/9/index.html
@@ -13,10 +13,15 @@
 		<div class="container">
 			<nav>
 				<ul id="tabs">
+					<!--
+					<li><button onclick="menuClickAbout()">О нас</button></li>
+					<li><button onclick="menuClickPhoto()">Фото</button></li>
+					-->
 					<li><a href="#about">О нас</a></li>
 					<li><a href="#photo">Фото</a></li>
 					<li><a href="#price">Стоимость</a></li>
 					<li><a href="#contacts">Контакты</a></li>
+					
 				</ul>
 			</nav>
 		</div>
@@ -41,8 +46,8 @@
 		</div>
 	</div>
 	<div class="content">
-		<div class="container" id="about">
-			<div class="info" >
+		<div class="container">
+			<div class="info" id="about">
 				<div class="info-header">
 					<div class="info-header-tab">Лечение</div>
 					<div class="info-header-tab">Отдых</div>
@@ -105,6 +110,8 @@
 					До конца акции осталось
 				</div>
 				<div class="timer-numbers" id="timer">
+					<!-- <span class="days">18</span>
+					<span>:</span> -->
 					<span class="hours">18</span>
 					<span>:</span>
 					<span class="minutes">20</span>
