--- a/9/доп.2.html
+++ b/9/доп.2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 <head>
     <body>
+        <button>Push me</button>
         <input id="age" value="30">
     
     <script src="доп.2.js" ></script>
