--- a/9/index.html
+++ b/9/index.html
@@ -13,10 +13,6 @@
 		<div class="container">
 			<nav>
 				<ul id="tabs">
-					<!--
-					<li><button onclick="menuClickAbout()">О нас</button></li>
-					<li><button onclick="menuClickPhoto()">Фото</button></li>
-					-->
 					<li><a href="#about">О нас</a></li>
 					<li><a href="#photo">Фото</a></li>
 					<li><a href="#price">Стоимость</a></li>
@@ -110,8 +106,8 @@
 					До конца акции осталось
 				</div>
 				<div class="timer-numbers" id="timer">
-					<!-- <span class="days">18</span>
-					<span>:</span> -->
+					<span class="days">18</span>
+					<span>:</span>
 					<span class="hours">18</span>
 					<span>:</span>
 					<span class="minutes">20</span>
