--- a/elements/this.html
+++ b/elements/this.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 <head>
 <body>
-    <button></button>
+    <button>Push me</button>
     
-    <script src="this.js" ></script>
+    <script src="ES6.js" ></script>
 <body>
 <html>
